--- a/src/app/home/Products/components/VerticalCard/verticalCard.module.css
+++ b/src/app/home/Products/components/VerticalCard/verticalCard.module.css
@@ -1,10 +1,10 @@
 .container {
-  padding: 32px;
   border: 1px solid #d9d9d9;
   border-radius: 24px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 32px;
 }
 
 .title {
@@ -12,7 +12,18 @@
   font-weight: 500;
 }
 
+.image {
+  position: relative;
+  height: 217px;
+}
+
+.image img {
+  border-radius: 16px;
+  object-fit: cover;
+}
+
 .info {
+  padding-top: 0;
   display: flex;
   flex-direction: column;
   gap: 16px;
