--- a/src/app/home/Contact/contact.module.css
+++ b/src/app/home/Contact/contact.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   max-width: 1330px;
   margin: auto;
-  margin-top: -60px;
+  margin-top: -30px;
   margin-bottom: 290px;
 }
 
@@ -33,4 +33,8 @@
   display: flex;
   gap: 18px;
   margin: auto;
+}
+
+.img {
+  margin-top: -130px;
 }
