--- a/src/app/home/Contact/contact.module.css
+++ b/src/app/home/Contact/contact.module.css
@@ -5,6 +5,7 @@
   margin: auto;
   margin-top: -30px;
   margin-bottom: 290px;
+  gap: 40px;
 }
 
 .central {
@@ -37,4 +38,11 @@
 
 .img {
   margin-top: -130px;
+}
+
+.img img {
+  max-width: 300px;
+  max-height: 300px;
+  object-fit: contain;
+  
 }
