--- a/src/app/home/Products/products.module.css
+++ b/src/app/home/Products/products.module.css
@@ -10,21 +10,6 @@
   grid-gap: 24px;
 }
 
-.slider {
-  display: flex;
-  overflow-x: auto;
-  border-radius: 24px;
-  padding-bottom: 12px;
-  gap: 48px;
-}
-
-.slider::-webkit-scrollbar {
-  scrollbar-width: thin;
-  background-color: #d9d9d9;
-  border-radius: 20px;
-}
-
-.slider::-webkit-scrollbar-thumb {
-  background-color: var(--color-secondary);
-  border-radius: 20px;
+.swiper {
+  max-width: 100%;
 }
