--- a/src/app/home/Hero/hero.module.css
+++ b/src/app/home/Hero/hero.module.css
@@ -13,6 +13,7 @@
   padding: 130px;
   margin-top: -130px;
   margin-inline: -65px;
+  overflow: hidden;
 }
 
 .content {
@@ -20,6 +21,7 @@
   gap: 120px;
   justify-content: center;
   z-index: 1;
+  position: relative;
 }
 
 .info {
@@ -108,8 +110,8 @@
 
 .gear {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: -250px;
+  right: -250px;
   opacity: 0.3;
   border-bottom-right-radius: 32px;
   z-index: 0;
