--- a/src/app/components/Button/button.module.css
+++ b/src/app/components/Button/button.module.css
@@ -31,3 +31,10 @@
   color: var(--color-font);
   border: 1px solid var(--color-secondary);
 }
+
+.ghost {
+  background-color: transparent;
+  color: var(--color-secondary);
+  border: none;
+  padding: 12px;
+}
