--- a/src/app/layout/layout.module.css
+++ b/src/app/layout/layout.module.css
@@ -46,6 +46,10 @@
   width: 120%;
 }
 
+.mobileMenu {
+  display: none;
+}
+
 .footerContainer {
   background-color: var(--color-secondary);
   background: linear-gradient(
@@ -75,4 +79,54 @@
   color: var(--color-font-contrast);
   font-size: 24px;
   list-style: none;
+}
+
+.mobileMenuContainer {
+  position: fixed;
+  min-width: 50vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  z-index: 10;
+  -moz-box-shadow: 5px 0px 10px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 5px 0px 10px -5px rgba(0, 0, 0, 0.75);
+  transition: all linear 0.3s;
+}
+
+.mobileRouteList {
+  list-style: none;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.mobileRouteList li {
+  padding: 24px;
+  border-bottom: 1px solid var(--color-secondary);
+}
+
+.mobileRouteList li:last-child {
+  border: none;
+}
+
+.mobileMenuCloseIcon {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+@media (max-width: 900px) {
+  .headerContainer {
+    flex-direction: row-reverse;
+  }
+
+  .headerContainer nav,
+  .cart {
+    display: none;
+  }
+
+  .mobileMenu {
+    display: block;
+  }
 }
