--- a/src/app/home/Value/value.module.css
+++ b/src/app/home/Value/value.module.css
@@ -2,6 +2,8 @@
   display: flex;
   gap: 70px;
   position: relative;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .info {
@@ -12,7 +14,7 @@
 }
 
 .heading {
-  font-size: 64px;
+  font-size: clamp(40px, 6vw, 64px);
   font-weight: 500;
 }
 
@@ -27,6 +29,7 @@
 
 .row {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -83,12 +86,12 @@
 }
 
 .stripContainer {
-    position: relative;
-    padding: 80px 100px;
-    padding-bottom: 34px;
-    overflow: hidden;
-    width: 110%;
-    margin-left: -5%;
+  position: relative;
+  padding: 80px 100px;
+  padding-bottom: 34px;
+  overflow: hidden;
+  width: 110%;
+  margin-left: -5%;
 }
 
 .strip {
@@ -97,28 +100,32 @@
   padding: 32px 77px 32px 150px;
   background-color: var(--color-primary);
   display: flex;
-  gap: 120px;
   width: 114%;
   margin-left: -7%;
   border-radius: 20px;
   position: relative;
 }
 
+.stripImgContainer {
+  position: absolute;
+  transform: rotate(8deg) scale(1.2) translate(50%, 50%);
+  bottom: 0;
+  left: 10%;
+}
+
 .strip img {
   width: 232px;
   height: 286px;
   object-fit: contain;
-  position: absolute;
-  transform: rotate(8deg) scale(1.2);
-  bottom: -30px;
-  left: 30px;
 }
 
 .stripTextContainer {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   gap: 64px;
   justify-content: flex-end;
+  margin-left: 232px;
 }
 
 .stripText {
@@ -133,4 +140,59 @@
 .stripDescription {
   margin-top: 8px;
   font-size: 18px;
+}
+
+@media screen and (max-width: 1350px) {
+  .strip img {
+    position: relative;
+    top: 50%;
+    flex: 1;
+    width: 250px;
+    height: 310px;
+    transform: scale(1.5) rotate(-10deg) translateY(-20%);
+    
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .stripTextContainer {
+    flex-direction: column;
+    flex: 3;
+    align-items: center;
+  }
+
+  .stripContainer {
+    padding: 0;
+    margin-top: 60px;
+  }
+
+  .strip img {
+    position: relative;
+    top: 50%;
+    flex: 1;
+    width: 250px;
+    height: 310px;
+    transform: scale(2) rotate(-10deg) translateY(-35%);
+    margin-left: -50px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .content {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 24px;
+  }
+
+  .images {
+    max-width: 100%;
+  }
+
+  .strip {
+    padding: 35px 14px;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    border-radius: 8px;
+  }
 }
