--- a/src/app/home/AboutUs/aboutUs.module.css
+++ b/src/app/home/AboutUs/aboutUs.module.css
@@ -1,5 +1,5 @@
 .description {
-  font-size: 24px;
+  font-size: clamp(16px, 4vw, 24px);
   color: var(--color-font-secondary);
   text-align: center;
   margin-top: -40px;
@@ -31,7 +31,7 @@
 @media screen and (max-width: 900px) {
   .grid {
     margin-top: 32px;
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 16px;
   }
 }
