--- a/src/app/home/Value/value.module.css
+++ b/src/app/home/Value/value.module.css
@@ -79,7 +79,7 @@
   width: 200px;
   bottom: 32px;
   text-align: center;
-  font-size: 32px;
+  font-size: clamp(22px, 5vw, 32px);
   color: var(--color-font-contrast);
   font-weight: 600;
   transition: all 0.2s ease;
@@ -209,6 +209,7 @@
 
   .stripContainer {
     padding: 50px 0px;
+    margin-top: 0;
   }
 
   .strip {
