--- a/src/app/components/Section/section.module.css
+++ b/src/app/components/Section/section.module.css
@@ -1,10 +1,11 @@
 .container {
   margin-inline: auto;
   max-width: 1338px;
+  margin-top: -140px;
 }
 
 .heading h2 {
-  font-size: clamp(40px, 6vw ,48px);
+  font-size: clamp(40px, 6vw, 48px);
   text-align: center;
   margin-bottom: 48px;
   font-weight: 500;
