--- a/src/app/home/AboutUs/aboutUs.module.css
+++ b/src/app/home/AboutUs/aboutUs.module.css
@@ -12,14 +12,14 @@
 
 .grid {
   display: flex;
+  /* flex-wrap: wrap; */
   justify-content: space-between;
-  gap: 125px;
+
   margin-top: 25px;
 }
 
 .benefit {
-  flex: 1;
-  width: 100%;
+  min-height: 317px;
 }
 
 @media screen and (max-width: 1024px) {
