--- a/src/app/home/AboutUs/components/AboutCard/aboutCard.module.css
+++ b/src/app/home/AboutUs/components/AboutCard/aboutCard.module.css
@@ -4,7 +4,9 @@
   border-radius: 20px;
   display: flex;
   flex-direction: column;
+  width: 100%;
   max-width: 340px;
+  height: 100%;
 }
 
 .title {
@@ -12,6 +14,7 @@
   color: #191919;
   margin-top: 20px;
   margin-bottom: 8px;
+  width: 220px;
 }
 
 .description {
