--- a/src/app/home/Products/components/VerticalCard/verticalCard.module.css
+++ b/src/app/home/Products/components/VerticalCard/verticalCard.module.css
@@ -14,7 +14,7 @@
 
 .image {
   position: relative;
-  height: 217px;
+  min-height: 217px;
 }
 
 .image img {
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  height: 100%;
 }
 
 .description p {
@@ -41,6 +42,7 @@
 
 .info button {
   width: fit-content;
+  margin-top: auto;
 }
 
 @media screen and (max-width: 700px) {
