--- a/src/app/home/Value/value.module.css
+++ b/src/app/home/Value/value.module.css
@@ -51,6 +51,7 @@
   transition: all 0.3s ease;
   cursor: pointer;
   position: relative;
+  max-height: 417px;
 }
 
 .imageContainer img {
@@ -62,12 +63,12 @@
 
 .background {
   position: absolute;
-  bottom: 4px;
+  bottom: 0px;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 20px;
   width: 100%;
-  height: 417px;
+  height: 100%;
   background-color: var(--color-secondary);
   opacity: 0.5;
 }
@@ -100,22 +101,23 @@
   padding: 32px 77px 32px 150px;
   background-color: var(--color-primary);
   display: flex;
-  width: 114%;
-  margin-left: -7%;
+  width: 110%;
+  margin-left: -5%;
   border-radius: 20px;
   position: relative;
 }
 
 .stripImgContainer {
   position: absolute;
-  transform: rotate(8deg) scale(1.2) translate(50%, 50%);
+  transform: scale(1.5) translate(50%, 50%);
   bottom: -15px;
   left: 10%;
 }
 
 .strip img {
-  width: 232px;
-  height: 286px;
+  transform: rotate(8deg);
+  width: 303px;
+  height: 288px;
   object-fit: contain;
 }
 
@@ -188,7 +190,7 @@
   }
 
   .strip img {
-    transform: scale(2) rotate(-10deg) translateY(-35%);
+    transform: scale(2) rotate(-10deg) translateY(-35%) scaleX(-1);
   }
 }
 
@@ -200,7 +202,7 @@
   }
 
   .stripImgContainer {
-    left: -15%;
+    left: -5%;
   }
 
   .images {
