--- a/src/app/home/Hero/hero.module.css
+++ b/src/app/home/Hero/hero.module.css
@@ -114,11 +114,12 @@
   gap: 34px;
   align-items: center;
   border-radius: 20px;
+  position: relative;
+  width: 100%;
+  height: 211px;
 }
 
 .whiteCube img {
-  max-width: 100%;
-  max-height: 211px;
   object-fit: cover;
   border-radius: 20px;
 }
