--- a/src/app/home/Value/value.module.css
+++ b/src/app/home/Value/value.module.css
@@ -77,10 +77,11 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: 200px;
+  width: 185px;
   bottom: 32px;
   text-align: center;
-  font-size: clamp(22px, 5vw, 32px);
+  font-size: clamp(20px, 5vw, 29px);
+  padding-inline: 10px;
   color: var(--color-font-contrast);
   font-weight: 600;
   transition: all 0.2s ease;
