--- a/src/app/layout/layout.module.css
+++ b/src/app/layout/layout.module.css
@@ -90,6 +90,7 @@
 
 .footerRow {
   display: flex;
+  justify-content: center;
   gap: 24px;
   color: var(--color-font-contrast);
   font-size: 24px;
