--- a/src/app/home/Health/health.module.css
+++ b/src/app/home/Health/health.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap-reverse;
+  align-items: center;
 }
 
 .info {
@@ -18,6 +19,9 @@
 .description {
   font-size: clamp(16px, 4vw, 24px);
   color: var(--color-font-secondary);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .description b {
@@ -35,10 +39,11 @@
   border-radius: 30px;
   padding: 12px 20px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .illustration {
-  max-height: 500px;
+  max-height: 350px;
   flex: 3;
 }
 
