--- a/src/app/home/Hero/hero.module.css
+++ b/src/app/home/Hero/hero.module.css
@@ -20,6 +20,7 @@
   display: flex;
   gap: 120px;
   justify-content: center;
+  align-items: center;
   z-index: 1;
   position: relative;
 }
@@ -73,6 +74,15 @@
   flex: 2;
   background-color: var(--color-primary);
   padding: 32px;
+}
+
+.redCube p {
+  font-size: clamp(10px, 3vw, 26px);
+}
+
+.redCube p:nth-child(2) {
+  font-size: clamp(10px, 3.5vw, 32px);
+  font-weight: 700;
 }
 
 .blueCube {
