--- a/src/app/home/Health/health.module.css
+++ b/src/app/home/Health/health.module.css
@@ -33,13 +33,8 @@
   justify-content: space-between;
 }
 
-.feat {
-  color: #1a1a1a;
-  border: 1px solid #000;
-  border-radius: 30px;
-  padding: 12px 20px;
-  font-weight: 600;
-  cursor: pointer;
+.feats button {
+  padding-inline: 24px !important;
 }
 
 .illustration {
