--- a/src/app/home/Hero/hero.module.css
+++ b/src/app/home/Hero/hero.module.css
@@ -31,6 +31,18 @@
   gap: 24px;
   flex: 1;
   max-width: 660px;
+  animation: slideLeft 1s ease;
+}
+
+@keyframes slideLeft {
+  from {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .slogan {
@@ -55,6 +67,20 @@
   flex: 1;
   width: 527px;
   max-width: 527px;
+  animation: slideRight 1s ease 0.3s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slideRight {
+  from {
+    transform: translateX(10%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .assetsRow1 {
