--- a/src/app/home/Value/value.module.css
+++ b/src/app/home/Value/value.module.css
@@ -29,8 +29,11 @@
 
 .row {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.row button {
+  padding-inline: 24px !important;
 }
 
 .row p {
@@ -53,6 +56,8 @@
   cursor: pointer;
   position: relative;
   max-height: 417px;
+  background-color: transparent;
+  border: none;
 }
 
 .imageContainer img {
@@ -174,7 +179,6 @@
   .stripTextContainer {
     flex-direction: column;
     flex: 3;
-    margin-left: 0;
     margin-left: 0;
     align-items: flex-end;
     margin-right: 40px;
