--- a/src/app/layout/layout.module.css
+++ b/src/app/layout/layout.module.css
@@ -30,11 +30,14 @@
   cursor: pointer;
 }
 
-.route {
-  cursor: pointer;
+.route button {
+  padding: 0;
+  color: var(--color-font);
+  font-weight: 400;
+  font-size: 16px;
 }
 
-.active {
+.active button {
   font-weight: 600;
   position: relative;
   cursor: pointer;
@@ -66,7 +69,7 @@
 }
 
 .footerContainer {
-  background-color: var(--color-secondary);
+  background: var(--color-secondary);
   background: linear-gradient(
     135deg,
     rgba(13, 15, 100, 1) 0%,
@@ -93,7 +96,6 @@
   justify-content: center;
   gap: 24px;
   color: var(--color-font-contrast);
-  font-size: 24px;
   list-style: none;
   font-size: 18px;
 }
@@ -134,8 +136,11 @@
   border: none;
 }
 
-.mobileRouteList a {
-  height: 30px;
+.mobileRouteList button {
+  background-color: transparent;
+  border: none;
+  color: var(--color-font);
+  font-weight: 400;
 }
 
 .mobileMenuCloseIcon {
