--- a/src/app/home/Hero/components/ExploreButton/exploreButton.module.css
+++ b/src/app/home/Hero/components/ExploreButton/exploreButton.module.css
@@ -6,6 +6,19 @@
   cursor: pointer;
 }
 
+.container svg {
+  animation: rotate360 60s infinite linear;
+}
+
+@keyframes rotate360 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .playBtn {
   background-color: transparent;
   border-radius: 50%;
