--- a/src/app/home/Hero/hero.module.css
+++ b/src/app/home/Hero/hero.module.css
@@ -168,6 +168,16 @@
   opacity: 0.3;
   border-bottom-right-radius: 32px;
   z-index: 0;
+  animation: rotate360 60s infinite linear;
+}
+
+@keyframes rotate360 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .bottom {
