--- a/src/app/home/Hero/hero.module.css
+++ b/src/app/home/Hero/hero.module.css
@@ -114,7 +114,9 @@
 .blueCube {
   flex: 3;
   background-color: var(--color-secondary);
-  padding: 32px 48px;
+  padding: 32px;
+  display: flex;
+  align-items: center;
 }
 
 .assetHeading {
@@ -123,7 +125,7 @@
 }
 
 .assetText {
-  font-size: clamp(10px, 3.5vw, 18px);
+  font-size: clamp(22px, 3.5vw, 18px);
   font-weight: 500;
   max-width: 170px;
 }
