--- a/src/pages/pdf/[name]/pdf.module.css
+++ b/src/pages/pdf/[name]/pdf.module.css
@@ -1,3 +1,9 @@
+.container {
+  background-color: #525659;
+  margin: -8px;
+  min-height: 100vh;
+}
+
 .pdf {
   margin: auto;
   width: min-content;
